[package]
name = "rflex"
version = "0.9.0"
authors = ["Shuzo Kashihara <kashihara@preferred.jp>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/pfnet/rflex"
readme = "README.md"
description = "Fast lexer code generator for Rust"
keywords = ["lexer", "lex"]

[dependencies]
fixedbitset = "0.5.7"
liquid = "0.26.4"
failure = "0.1.5"
